clusters/midgard/podinfo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: midgard

spec:
  ingressClassName: traefik

  rules:
    - host: podinfo.midgard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
